styling fixes for syntax highlighting region.
 - prevents line numbers from overlapping the outer block's border
 - outer block background matches sunlight's background

--- a/template/static/styles/site.cosmo.css
+++ b/template/static/styles/site.cosmo.css
@@ -835,7 +835,7 @@ pre {
   word-wrap: break-word;
   white-space: pre;
   white-space: pre-wrap;
-  background-color: #f5f5f5;
+  background-color: rgb(248, 248, 255);
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   -webkit-border-radius: 0px;
